<resources>
    <string name="app_name">Currency converter</string>
    <string name="my_balances">My Balances</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="sell">Sell</string>
    <string name="receive">Receive</string>
    <string name="submit">Submit</string>
    <string name="try_again">Try again once connected to internet.</string>
    <string name="connection_time_out">Connection timeout, check your internet connection.</string>
    <string name="something_went_wrong">Something went wrong. Please try again later</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="add_new_currency">Add new currency</string>
    <string name="add_currency_summary">Click here to add currency</string>
    <string name="update_commission">Update Commission</string>
    <string name="update_commission_summary">Initial commission is 0.70 percent</string>
    <string name="update_commission_title">Update commission</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="invalid_input_error">Please valid input</string>
    <string name="commission_added_msg">Commission Updated</string>
    <string name="currency_add_success_message">Currency added successfully</string>
    <string name="currency_converted">Currency converted</string>
    <string name="update_sync_time">Update Sync Time (In Second)</string>
    <string name="sync_time_summary">Default value is 5 sec</string>
    <string name="update_time_title">Update Sync Time (In Second)</string>
    <string name="enter_free_total_conversion">Enter free total conversion</string>
    <string name="receiver_same_currency_error">Receiver currency should be different from sell currency</string>
    <string name="same_sell_currency_error">Sell currency should be different from receiver currency</string>
    <string name="balance_cannot_fall_below_zero">Balance can\'t fall below zero</string>

</resources>