<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <ImageView
        android:id="@+id/iconSell"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight=".25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/sellText"
        app:srcCompat="@drawable/shape_sell_circle" />

    <TextView
        android:id="@+id/sellText"
        style="@style/Text.body"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center|start"
        android:paddingStart="@dimen/dp10"
        android:paddingEnd="@dimen/dp5"
        android:text="@string/sell"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintLeft_toRightOf="@+id/iconSell"
        app:layout_constraintRight_toLeftOf="@+id/amountET"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amountET"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end|center"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLines="3"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/sellText"
        app:layout_constraintRight_toLeftOf="@+id/sellCurrencyTv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sellCurrencyTv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:hint="NA"
        android:paddingVertical="@dimen/standard_margin"
        android:paddingHorizontal="@dimen/dp5"
        app:drawableEndCompat="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight=".5"
        app:layout_constraintLeft_toRightOf="@+id/amountET"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>