...
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight=".25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/receiveText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_receive_circle" />

    <TextView
        android:id="@+id/receiveText"
        style="@style/Text.body"
...
        android:text="+0.00"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/receiveText"
        app:layout_constraintRight_toLeftOf="@+id/receiveCurrencyTv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/receiveCurrencyTv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
...
